@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.13  Last change: 2024 November 6
+*vifm-app.txt*    For Vifm version 0.13  Last change: 2024 November 20
 
  Email for bugs and suggestions: <xaizek@posteo.net>
 
@@ -5156,6 +5156,7 @@ input({prompt} [, {initial} [, {completion}]])
                       String      Prompts user for an input on command-line.
 layoutis({type})      Integer     Checks whether layout is of type {type}.
 paneisat({loc})       Integer     Checks whether current pane is at {loc}.
+selected()            Integer     Returns number of currently selected files.
 system({command})     String      Executes shell command and returns its output.
 tabpagenr([{arg}])    Integer     Returns number of current or last tab.
 term({command})       String      Like system(), but for interactive commands.
@@ -5340,6 +5341,9 @@ following locations:
     left    pane reaches left border
     right   pane reaches right border
 
+selected()                                     *vifm-selected()*
+
+Retrieves number of files selected in the active pane.
 
 system({command})                              *vifm-system()*
 
